--- a/backend/package.json
+++ b/backend/package.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "name": "aad-backend",
   "version": "1.0.0",
   "private": true,
@@ -7,7 +7,7 @@
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "build": "tsc -p tsconfig.json",
     "start": "node dist/server.js",
-    "lint": "eslint --ext .ts src || echo 'Lint skipped'"
+    "lint": "eslint --ext .ts src"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
